# oma-kulu

./: .dockerignore  .env.example  .envrc.example  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.config.ts  app.json  fly.toml  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.cursor/rules/: oma-kulu-rule.mdc
.github/: ci.yml
.github/workflows/: ci-cd.yml  ci.yml
__tests__/: example.test.ts
app/: _layout.tsx  modal.tsx
app/(tabs)/: _layout.tsx  budgets.tsx  categories.tsx  explore.tsx  index.tsx  reports.tsx  transactions.tsx
app/components/: AboutModal.tsx  passcode-gate.tsx
app/constants/: theme.ts
app/lib/: database-helpers.test.ts  database-helpers.ts  passcode.ts
app/utils/: logger.ts
backend/: main.py  pyproject.toml  requirements.txt
backend/config/: supabase.py
backend/models/: schemas.py
backend/routers/: categories.py  transactions.py
components/: color-picker.tsx  icon-picker.tsx  passcode-gate.tsx  snackbar-provider.tsx
components/ui/: CategoryBadge.tsx  ColorPickerDialog.tsx  ConfirmDialog.tsx  CustomCheckbox.tsx  DetailPopup.tsx  Dialog.tsx  EmojiPickerDialog.tsx  IOSColorPicker.tsx  (+9 more)
constants/: AppTheme.ts
docs/: APP_SPEC.md  ROADMAP.md  SAVINGS_FEATURE_SPEC.md  bugs.md  optimization.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
hooks/: use-color-scheme.ts  use-color-scheme.web.ts
lib/: database.ts  passcode.ts  session.ts  storage.ts  supabase.ts  types.ts
scripts/: deploy-all.sh  lint-status.js
(+231 files in other folders)
